# codeguard

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  marketplace.json  package-lock.json
.claude-plugin/: marketplace.json
codeguard-plugin/: settings.json
codeguard-plugin/.claude-plugin/: plugin.json
codeguard-plugin/agents/: review-agent.md
codeguard-plugin/commands/: review.md
codeguard-plugin/hooks/: hooks.json
codeguard-plugin/hooks/scripts/: fix-review.py  upload-result.sh  validate-review.py
docs/: codeguard-product-doc.md
scripts/: install-plugin.sh
server/: .env.example  Dockerfile  alembic.ini  pyproject.toml
server/app/: config.py  database.py  main.py  middleware.py  tables.py  utils.py
server/app/api/: deps.py
server/app/api/v1/: findings.py  projects.py  reviews.py  router.py
server/app/models/: __init__.py  finding.py  project.py  review.py
server/app/storage/: __init__.py  base.py  postgres.py
server/app/vcs/: __init__.py  base.py  gitlab.py
server/migrations/: env.py
server/migrations/versions/: 001_initial_tables.py  002_review_version_auto_increment.py  003_add_review_title.py
server/tests/: conftest.py  test_config.py  test_findings.py  test_models.py  test_projects.py  test_reviews.py  test_storage.py
web/: Dockerfile  demo-themes.html  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
web/src/: index.css  main.tsx  router.tsx
(+38 files in other folders)
